Fix paste without style on macOS.

NSViews in Views need to implement pasteAndMatchStyle:.

The IDS_PASTE_MATCH_STYLE_MAC main menu item had the wrong key equivalent.

Bug: 882166
Change-Id: I0ba029afddaab8e155d5cfadaccadf2c231a3e79
Reviewed-on: https://chromium-review.googlesource.com/1255864
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596280}
Former-commit-id: fa42ff1dce7ed21b555f67cb4f046aa9f5aa5344